--- a/TwitchLeecher/TwitchLeecher/TwitchLeecher.csproj
+++ b/TwitchLeecher/TwitchLeecher/TwitchLeecher.csproj
@@ -96,7 +96,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y $(SolutionDir)Libraries\VC\*.* $(TargetDir)</PostBuildEvent>
+    <PostBuildEvent>copy /Y "$(SolutionDir)Libraries\VC\*.*" "$(TargetDir)"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
